[workspace]
members = ["raft-common", "raft-core", "raft-test"]
[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
bytes = "1.5.0"
log = "0.4.21"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
heed = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0.115"
protobuf = "3.4.0"
