[package]
name = "raft-code"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"


[dependencies]
protobuf = { version = "3.4.0" }
bytes = "1.6.0"
log = { workspace = true }


[build-dependencies]
#protobuf-build = { version = "0.15.1", default-features = true }
protobuf-codegen = "3.4.0"
protoc-bin-vendored = "3.0.0"
