[package]
name = "raft-common"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
heed = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }


[dev-dependencies]
env_logger = "0.11.3"
