[package]
name = "raft-common"
version.workspace = true
edition.workspace = true


[dependencies]
protobuf = { version = "3.4.0" }
heed = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
derive_builder = { workspace = true }
