[package]
name = "raft-core"
version.workspace = true
edition.workspace = true

build = "build.rs"

[dependencies]
bytes = { workspace = true }
tokio-util = { workspace = true }
tokio = { workspace = true }
raft-common = { version = "0.1.0", path = "../raft-common" }

[build-dependencies]
#protobuf-build = { version = "0.15.1", default-features = true }
protobuf-codegen = "3.4.0"
protoc-bin-vendored = "3.0.0"
