[package]
name = "raft-test"
version.workspace = true
edition.workspace = true


[dependencies]
raft-common = { version = "0.1.0", path = "../raft-common" }
raft-core = { version = "0.1.0", path = "../raft-core" }
log = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
env_logger = { workspace = true }
